<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CreationBinder</string>
    <string name="app_label_empty"> </string>
    <string name="app_event_name">サンシャインクリエイション64</string>
    <string name="app_tutorial_welcome_label">ようこそ！</string>
    <string name="app_tutorial_welcome_search_circle">お気に入りサークルを探そう！</string>
    <string name="app_tutorial_welcome_swipe_to_paging">スワイプでページ送り！</string>
    <string name="app_tutorial_welcome_add_checklist">お気に入りに簡単登録！</string>
    <string name="app_tutorial_welcome_show_checklist">お気に入りサークルを一覧できる！</string>
    <string name="app_tutorial_initialize_about">@string/common_about</string>
    <string name="app_tutorial_initialize_progress">初期化しています</string>
    <string name="app_tutorial_initialize_complete">お気に入りサークルを探す！</string>
    <string name="app_circle_search_keyword_hint">サークル名 or ペンネーム</string>
    <string name="app_enjoy_creation_overview">サンクリを楽しもう！\n初参加の方もこちらから</string>

    <string name="app_creation_homepage_top">http://www.creation.gr.jp/</string>
    <string name="app_creation_homepage_peti_only">http://www.creation.gr.jp/sc65/petitonly.html</string>
    <string name="app_creation_homepage_welcome">http://www.creation.gr.jp/common/welcome.html</string>

    <string name="app_peti_only">プチオンリー</string>
    <string name="app_peti_only_nmnl_name">No µ\'sic, No Live!</string>
    <string name="app_peti_only_nmnl_description">「ラブライブ！ School idol project」ジャンル</string>
    <string name="app_peti_only_omufes_name">おむ☆フェス</string>
    <string name="app_peti_only_omufes_description">おむつっ娘メイン</string>


    <string name="app_enjoy_creation_label">サンクリを楽しもう！</string>
    <string name="app_enjoy_creation_peti_only_label">プチオンリー</string>
    <string name="app_enjoy_creation_peti_only_description">イベントの会場内でスペースを集合配置し、参加サークルの手によって様々な企画を行うことが出来るイベント内企画です。</string>
    <string name="app_enjoy_creation_news_label">クリエイションニュース</string>
    <string name="app_enjoy_creation_news_description">会場内で5〜8枚ほど(枚数は開催時によってまちまち)、「クリエイションニュース」が発行されます。\n各ホール入り口そばや、クリエイション事務局本部の近くに設置されている事が多いです。</string>
    <string name="app_enjoy_creation_rakugaki_corner_label">ラクガキコーナー</string>
    <string name="app_enjoy_creation_rakugaki_corner_description">各ホールの壁や柱に大きな紙が貼られています。\nホール毎にテーマが設定されており、誰でもラクガキ可能な自由な場で毎回たくさんのラクガキが寄せられています。</string>
    <string name="app_enjoy_creation_survey_label">アンケート</string>
    <string name="app_enjoy_creation_survey_description">クリエイション事務局では参加者からの声を集めています。\n当日の感想の他に、次回開催時のカタログにコメントが掲載される項目や、アンケートに答える事でイラスト色紙等の抽選権の獲得等もあります。\n詳細はカタログや当日のアナウンスにてご確認ください。</string>
    <string name="app_enjoy_creation_about_catalog_label">カタログについて</string>
    <string name="app_enjoy_creation_about_catalog_description">その他注意事項やイベント内イベントの詳細等はカタログに掲載されています。\nカタログは入場証にもなっておりますので、入場の前に必ず1人1冊ご購入ください。</string>
    <string name="app_enjoy_creation_about_catalog_link">http://www.creation.gr.jp/common/visitor.html</string>

    <!-- Preference -->
    <string name="app_pref_app_storage">pref_app_storage</string>
    <string name="app_pref_app_storage_is_initialize">pref_app_storage_is_initialize</string>

    <!-- Fragment -->
    <string name="fragment_tag_data_initialize">fragment_tag_data_initialize</string>

</resources>