<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:baselineAligned="false"
    android:paddingLeft="@dimen/common_spacer_x_small"
    android:paddingRight="@dimen/common_spacer_x_small"
    >

    <RelativeLayout
        android:id="@+id/enjoy_creation_peti_only_nmnl_container"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/common_card_item_selector"
        >

        <ImageView
            style="@style/AppPetiOnlyThumbnail"
            android:id="@+id/enjoy_creation_peti_only_nmnl_image"
            android:layout_width="48dp"
            android:layout_height="72dp"
            android:layout_marginRight="@dimen/common_spacer_x_small"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_peti_only_nmnl_name"
            />

        <TextView
            style="@style/AppPetiOnlyTitle"
            android:id="@+id/enjoy_creation_peti_only_nmnl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/enjoy_creation_peti_only_nmnl_image"
            android:layout_marginBottom="@dimen/common_spacer_xx_small"
            android:text="@string/app_peti_only_nmnl_name"
            />

        <TextView
            style="@style/AppPetiOnlyDescription"
            android:id="@+id/enjoy_creation_peti_only_nmnl_description"
            android:layout_toRightOf="@+id/enjoy_creation_peti_only_nmnl_image"
            android:layout_below="@+id/enjoy_creation_peti_only_nmnl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_peti_only_nmnl_description"
            />

    </RelativeLayout>

    <View
        android:layout_width="@dimen/common_spacer_x_small"
        android:layout_height="match_parent"
        />


    <RelativeLayout
        android:id="@+id/enjoy_creation_peti_only_omufes_container"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/common_card_item_selector"
        >

        <ImageView
            style="@style/AppPetiOnlyThumbnail"
            android:id="@+id/enjoy_creation_peti_only_omufes_image"
            android:layout_width="48dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="@dimen/common_spacer_x_small"
            android:contentDescription="@string/app_peti_only_omufes_name"
            />

        <TextView
            style="@style/AppPetiOnlyTitle"
            android:id="@+id/enjoy_creation_peti_only_omufes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/enjoy_creation_peti_only_omufes_image"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/common_spacer_xx_small"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/app_peti_only_omufes_name"
            />

        <TextView
            style="@style/AppPetiOnlyDescription"
            android:id="@+id/enjoy_creation_peti_only_omufes_description"
            android:layout_toRightOf="@+id/enjoy_creation_peti_only_omufes_image"
            android:layout_below="@+id/enjoy_creation_peti_only_omufes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_peti_only_omufes_description"
            />

    </RelativeLayout>

</LinearLayout>